# uuidworker

./: CMakeLists.txt  bufpool.c  bufpool.h  conn.c  conn.h  connection.c  connection.h  readme.txt  uuid.c  uuid.h  uuidworker.c  uuidworker.conf
client/: WxClient.php
lib/: CMakeLists.txt  conf.c  conf.h  defs.h  dummyfd.c  dummyfd.h  env.c  env.h  shm.c  shm.h  wxdo.h  wxworker.c  wxworker.h
wxworker/: defs.h
